Fixed image file extensions to lowercase (.jpg, .png)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1 class="pretext">A passionate QA, mobile app developer, and game developer dedicated to creating seamless, high-quality digital experiences.</h1>
       </div>
       <div class="intro-image">
-        <img src="images/profile.JPG" alt="Monica - Marketing Strategist">
+        <img src="images/profile.jpg alt="Monica - Marketing Strategist">
       </div>
     </div>
     <a href="#about" class="scroll-down">⬇ Scroll for more</a>
@@ -115,22 +115,22 @@
 
     <div class="image-grid">
       <div class="image-item">
-        <img src="images/gallery4.JPG" alt="Gallery 1">
+        <img src="images/gallery4.jpg" alt="Gallery 1">
       </div>
       <div class="image-item">
         <img src="images/profile.jpg" alt="Gallery 2">
       </div>
       <div class="image-item">
-        <img src="images/gallery2.JPG" alt="Gallery 3">
+        <img src="images/gallery2.jpg" alt="Gallery 3">
       </div>
       <div class="image-item">
-        <img src="images/gallery5.JPG" alt="Gallery 4">
+        <img src="images/gallery5.jpg" alt="Gallery 4">
       </div>
       <div class="image-item">
-        <img src="images/gallery.JPG" alt="Gallery 5">
+        <img src="images/gallery.jpg" alt="Gallery 5">
       </div>
       <div class="image-item">
-        <img src="images/gallery3.JPG" alt="Gallery 6">
+        <img src="images/gallery3.jpg" alt="Gallery 6">
       </div>
     </div>
   </div>
