Rename Gallery.JPG to gallery.jpg (fix case sensitivity)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1 class="pretext">A passionate QA, mobile app developer, and game developer dedicated to creating seamless, high-quality digital experiences.</h1>
       </div>
       <div class="intro-image">
-        <img src="images/profile.jpg alt="Monica - Marketing Strategist">
+        <img src="images/profile.jpg">
       </div>
     </div>
     <a href="#about" class="scroll-down">⬇ Scroll for more</a>
