--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
   <section class="intro-section">
   <div class="container">
     <div class="intro-content">
-      <div class="intro-text">
-        <p class="pretitle">Hello, I'm James Ruzzel</p>
-        <h1 class="pretext">A passionate QA, mobile app developer, and game developer dedicated to creating seamless, high-quality digital experiences.</h1>
-      </div>
+<div class="intro-text">
+  <p class="pretitle">Hello, I'm James Ruzzel</p>
+  <h1 class="pretext">
+    <span class="typing-label">A passionate <br></span>
+    <span id="typing-text"></span>
+  </h1>
+</div>
+
       <div class="intro-image">
         <img src="images/profile.jpg">
       </div>
