--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </p>
         <div class="about-highlights">
           <div class="highlight-box">
-            <h3>Skills</h3>
+            <h3>Tech Stack</h3>
             <p>Java, C#, Kotlin, HTML, CSS, JavaScript</p>
           </div>
           <div class="highlight-box">
@@ -172,61 +172,27 @@
 
 
  <!-- footer -->
-  <footer class="footer">
-  <div class="container footer-content">
-    <div class="footer-about">
-      <h3>About Ruzzel</h3>
-      <p>
-        Passionate web and mobile developer creating seamless, user-friendly,
-        and visually appealing digital experiences. Turning ideas into
-        impactful results through code and creativity.
-      </p>
-    </div>
-
-    <div class="footer-links">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </div>
-
-<div class="footer-social">
-  <h3>Follow Me</h3>
-  <div class="social-icons">
+<footer class="footer">
+  <div class="footer-social">
     <a href="https://facebook.com" target="_blank" aria-label="Facebook">
-      <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
+      <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
     </a>
-    <a href="https://twitter.com" target="_blank" aria-label="Twitter">
-      <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter">
-    </a>
-    <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+    <a href="https://Instagram.com" target="_blank" aria-label="Twitter">
       <img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram">
     </a>
-    <a href="https://reddit.com" target="_blank" aria-label="Reddit">
-      <img src="https://cdn-icons-png.flaticon.com/512/2111/2111589.png" alt="Reddit">
+    <a href="https://twitter.com/" target="_blank" aria-label="Instagram">
+      <img src="https://cdn-icons-png.flaticon.com/512/5968/5968830.png" alt="X Logo">
+    </a>
+    <a href="https://github.com" target="_blank" aria-label="GitHub">
+      <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub">
     </a>
   </div>
-
-  <h3>Email</h3>
-  <div class="email-container">
-    <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email Icon">
-    <p>jamesruzzeltiongson@gmail.com</p>
-  </div>
-
-    <h3>Phone Number</h3>
-  <div class="email-container">
-    <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email Icon">
-    <p>+63 936 190 9731</p>
-  </div>
-
 
   <div class="footer-bottom">
     <p>© 2025 James Ruzzel Tiongson</p>
   </div>
 </footer>
+
 
 
 
