--- a/index.html
+++ b/index.html
@@ -63,20 +63,29 @@
     <div class="projects-grid">
       <div class="project-card">
         <img src="images/wikahagonoy.png" alt="Project 1">
-        <h3>WikaPinas App</h3>
-        <p>A mobile learning app designed to teach Filipino language and culture.</p>
+        <video class="project-video" src="images/video1.mp4" muted></video>
+        <div class="project-info">
+          <h3>WikaPinas App</h3>
+          <p>A mobile learning app designed to teach Filipino language and culture.</p>
+        </div>
       </div>
 
       <div class="project-card">
         <img src="images/unleash.png" alt="Project 2">
-        <h3>Unleash Game App</h3>
-        <p>A social platform where friends and pet lovers can share fun moments, connect, and play interactive pet games together.</p>
+        <video class="project-video" src="images/video2.mp4" muted></video>
+        <div class="project-info">
+          <h3>Unleash Play</h3>
+          <p>A social platform where friends and pet lovers can share fun moments, connect, and play interactive pet games together.</p>
+        </div>
       </div>
 
       <div class="project-card">
-        <img src="images/logo.png" alt="Project 3">
-        <h3>My own portfolio</h3>
-        <p>A digital service brand offering game assistance and community support.</p>
+        <img src="images/stepUp.png" alt="Project 3">
+        <video class="project-video" src="videos/unleash.mp4" muted></video>
+        <div class="project-info">
+          <h3>Ecommerce Website</h3>
+          <p>An online shopping platform that allows users to browse, purchase, and track products seamlessly from their favorite brands.</p>
+        </div>
       </div>
     </div>
   </div>
