--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <!-- Navbar Section -->
-  <nav class="custom-navbar navbar navbar-expand-lg navbar-dark">
+<nav class="custom-navbar navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#home">
       <img src="images/logo.png" alt="Logo">
@@ -23,16 +23,18 @@
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-<li class="nav-item">
-  <a class="nav-link" href="#" id="home-link">Home</a>
-</li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="home-link">Home</a>
+        </li>
         <li class="nav-item"><a class="nav-link active" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link active" href="#project">My Project</a></li>
+        <li class="nav-item"><a class="nav-link active" href="#gallery">Gallery</a></li> <!-- ✅ Added Gallery -->
         <li class="nav-item"><a class="nav-link active" href="#contact">Contact Us</a></li>
       </ul>
     </div>
   </div>
 </nav>
+
 
 
   <!-- Body Section -->
@@ -105,16 +107,25 @@
           I specialize in creating visually appealing and user-friendly digital experiences. 
           I enjoy transforming ideas into real-world solutions through clean and efficient code.
         </p>
-        <div class="about-highlights">
-          <div class="highlight-box">
-            <h3>Tech Stack</h3>
-            <p>Java, C#, Kotlin, HTML, CSS, JavaScript</p>
-          </div>
-          <div class="highlight-box">
-            <h3>Focus</h3>
-            <p>Quality Assurance & Mobile App Developer</p>
-          </div>
-        </div>
+<div class="about-highlights">
+  <div class="highlight-box">
+    <h3>Tech Stack</h3>
+    <div class="tech-icons">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" alt="C#">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/kotlin/kotlin-original.svg" alt="Kotlin">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
+    </div>
+  </div>
+
+  <div class="highlight-box">
+    <h3>Focus</h3>
+    <p>Quality Assurance & Mobile App Developer</p>
+  </div>
+</div>
+
       </div>
     </div>
   </div>
