--- a/index.html
+++ b/index.html
@@ -57,6 +57,44 @@
   </div>
 </section>
 
+<section class="about-section" id="about">
+  <div class="container">
+    <div class="about-content">
+      <div class="about-image">
+        <img src="images/profile2.jpg" alt="James Ruzzel Tiongson">
+      </div>
+      <div class="about-text">
+        <h2>About Me</h2>
+        <p>
+          Hello! I'm <span>James Ruzzel Tiongson</span>, a passionate web and mobile developer from the Philippines. 
+          I specialize in creating visually appealing and user-friendly digital experiences. 
+          I enjoy transforming ideas into real-world solutions through clean and efficient code.
+        </p>
+<div class="about-highlights">
+  <div class="highlight-box">
+    <h3>Tech Stack</h3>
+    <div class="tech-icons">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" alt="C#">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/kotlin/kotlin-original.svg" alt="Kotlin">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
+    </div>
+  </div>
+
+  <div class="highlight-box">
+    <h3>Focus</h3>
+    <p>Quality Assurance & Mobile App Developer</p>
+  </div>
+</div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- project-->
 <section id="project" class="projects-section">
   <div class="container">
     <h2 class="section-title">My Projects</h2>
@@ -94,42 +132,6 @@
 </section>
 
 
-<section class="about-section" id="about">
-  <div class="container">
-    <div class="about-content">
-      <div class="about-image">
-        <img src="images/profile2.jpg" alt="James Ruzzel Tiongson">
-      </div>
-      <div class="about-text">
-        <h2>About Me</h2>
-        <p>
-          Hello! I'm <span>James Ruzzel Tiongson</span>, a passionate web and mobile developer from the Philippines. 
-          I specialize in creating visually appealing and user-friendly digital experiences. 
-          I enjoy transforming ideas into real-world solutions through clean and efficient code.
-        </p>
-<div class="about-highlights">
-  <div class="highlight-box">
-    <h3>Tech Stack</h3>
-    <div class="tech-icons">
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java">
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" alt="C#">
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/kotlin/kotlin-original.svg" alt="Kotlin">
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
-    </div>
-  </div>
-
-  <div class="highlight-box">
-    <h3>Focus</h3>
-    <p>Quality Assurance & Mobile App Developer</p>
-  </div>
-</div>
-
-      </div>
-    </div>
-  </div>
-</section>
 
 <!-- ===== GALLERY SECTION ===== -->
 <section id="gallery" class="gallery-section">
