--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>My Portfolio</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="icon" type="image/png" href="images/logo.png">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -28,7 +29,7 @@
         </li>
         <li class="nav-item"><a class="nav-link active" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link active" href="#project">My Project</a></li>
-        <li class="nav-item"><a class="nav-link active" href="#gallery">Gallery</a></li> <!-- ✅ Added Gallery -->
+        <li class="nav-item"><a class="nav-link active" href="#gallery">Gallery</a></li> 
         <li class="nav-item"><a class="nav-link active" href="#contact">Contact Us</a></li>
       </ul>
     </div>
@@ -156,7 +157,7 @@
         <img src="images/gallery.jpg" alt="Gallery 5">
       </div>
       <div class="image-item">
-        <img src="images/gallery3.jpg" alt="Gallery 6">
+        <img src="images/gallery6.jpg" alt="Gallery 6">
       </div>
     </div>
   </div>
