--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" href="images/logo.png">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -42,19 +43,21 @@
   <section class="intro-section">
   <div class="container">
     <div class="intro-content">
-<div class="intro-text">
-  <p class="pretitle">Hello, I'm James Ruzzel</p>
-  <h1 class="pretext">
-    <span class="typing-label">A passionate <br></span>
-    <span id="typing-text"></span>
-  </h1>
-</div>
+    <div class="intro-text">
+      <p class="pretitle">Hello, I'm James Ruzzel</p>
+      <h1 class="pretext">
+        <span class="typing-label">A passionate <br></span>
+        <span id="typing-text"></span>
+      </h1>
+    </div>
 
       <div class="intro-image">
         <img src="images/profile.jpg">
       </div>
     </div>
-    <a href="#about" class="scroll-down">⬇ Scroll for more</a>
+    <a href="#about" class="scroll-down-btn">
+      <i class="fas fa-chevron-down"></i>
+    </a>
   </div>
 </section>
 
@@ -101,6 +104,7 @@
     <h2 class="section-title">My Projects</h2>
     <p class="section-subtitle">A few works that I’ve designed and developed.</p>
 
+    <a href="https://github.com/Bleummyyy/CAPSTONE-PROJ" target="_blank" >
     <div class="projects-grid">
       <div class="project-card">
         <img src="images/wikahagonoy.png" alt="Project 1">
@@ -110,16 +114,18 @@
           <p>A mobile learning app designed to teach Filipino language and culture.</p>
         </div>
       </div>
+      </a>
 
-      <div class="project-card">
-        <img src="images/unleash.png" alt="Project 2">
-        <video class="project-video" src="images/video2.mp4" muted></video>
-        <div class="project-info">
-          <h3>Unleash Play</h3>
-          <p>A social platform where friends and pet lovers can share fun moments, connect, and play interactive pet games together.</p>
+      <a href="https://unleash.ph/" target="_blank">
+        <div class="project-card">
+          <img src="images/unleash.png" alt="Unleash App">
+          <video src="images/video2.mp4" muted loop></video>
+          <div class="project-info">
+            <h3>Unleash</h3>
+            <p>A modern e-commerce platform for smart shopping experiences.</p>
+          </div>
         </div>
-      </div>
-
+      </a>
       <div class="project-card">
         <img src="images/stepUp.png" alt="Project 3">
         <video class="project-video" src="videos/unleash.mp4" muted></video>
@@ -162,6 +168,12 @@
     </div>
   </div>
 </section>
+<!-- Fullscreen image Modal -->
+<div id="imageModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="modalImage">
+</div>
+
 
 <!-- ===== CONTACT SECTION ===== -->
 <section id="contact" class="contact-section">
