--- a/index.html
+++ b/index.html
@@ -168,11 +168,13 @@
     </div>
   </div>
 </section>
-<!-- Fullscreen image Modal -->
-<div id="imageModal" class="modal">
-  <span class="close">&times;</span>
-  <img class="modal-content" id="modalImage">
+
+<!-- Fullscreen Image Viewer -->
+<div id="image-viewer" class="image-viewer">
+  <span class="close-btn">&times;</span>
+  <img id="full-image" src="" alt="Full view">
 </div>
+
 
 
 <!-- ===== CONTACT SECTION ===== -->
