--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@
         <img src="images/profile.jpg">
       </div>
     </div>
-    <a href="#about" class="scroll-down-btn">
-      <i class="fas fa-chevron-down"></i>
-    </a>
+    <a href="#about" class="scroll-down-btn" aria-label="Scroll to About">
+  <!-- Inline SVG chevron down -->
+  <svg width="30" height="30" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+    <path fill="currentColor" d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"/>
+  </svg>
+</a>
+
   </div>
 </section>
 
